<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mros_ontology</name>
  <version>0.1.0</version>
  <description>Ontology for MROS metacontroller</description>
  <maintainer email="e.aguado.glez@gmail.com">e.aguado</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
